<resources>
    <string name="app_name">NutritionApp</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="nav_goals">Goals</string>
    <string name="nav_food_diary">Food Diary</string>
    <string name="nav_more">More</string>
    <string name="username_password">Please enter your Username and Password</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="log_in">LOG IN</string>
    <string name="register">REGISTER</string>
    <string name="verify_password">Verify Password</string>
    <string name="account_question">Don\'t have an account?</string>
    <string name="calories_remaining">Calories Remaining</string>

    <string-array name="my_foods">
        <item>Pizza</item>
        <item>Ice Cream</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
