<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

        <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

        <item
        android:id="@+id/navigation_goals"
        android:icon="@drawable/ic_fitness_center_black_24dp"
        android:title="@string/nav_goals" />

        <item
        android:id="@+id/navigation_food_diary"
        android:icon="@drawable/ic_book_black_24dp"
        android:title="@string/nav_food_diary" />

        <item
        android:id="@+id/navigation_more"
        android:icon="@drawable/ic_more_horiz_black_24dp"
        android:title="@string/nav_more" />

</menu>